Fix: tables scroll on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -105,6 +105,8 @@ body {
 // Layout changes for embeding Jupyter notebooks
 table {
     background-color: #fff !important;
+    overflow-x: scroll;
+    display: block;
 }
 
 td, th {
